# xml-feed-integration

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  flake.nix
.sqlx/: query-04861df4213063391e54dd1733e4558217e4d05f443777520a127f8b48d06b86.json  query-097ee384d88a105d096c91327313623c7b39f047d100e8a9d7b06665ee55f840.json  query-0e17d44e8a99f1040789a3bda31a78df64f01b3b64ee4f68249a584420a2050e.json  query-2e67514f2869ad3d55eb17f192f6c090f1ce7f9cb3eea49fa356960f4838ca69.json  query-6a44fd37ad960728db247089daf568923e0f07ec80dc955c338b99e3a675eaab.json
migrations/: 20260410000001_create_posts.down.sql  20260410000001_create_posts.up.sql
src/: feed.rs  lib.rs  main.rs
src/feed/: tests.rs
src/feed/fixtures/: rugged_neva_smoove_post.html
src/models/: mod.rs  post.rs
src/repositories/: mod.rs  post.rs
tests/: db_persistence.rs
